fix grid spacing

--- a/public/css/index.css
+++ b/public/css/index.css
@@ -389,13 +389,16 @@ button {
 
 .grid {
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr 1fr;
-  grid-template-rows: 1fr 1fr 1fr 1fr; }
+  grid-template-columns: repeat(4, 1fr);
+  grid-template-rows: repeat(4, 1fr);
+  column-gap: 20px;
+  row-gap: 20px; }
 
 .bottom {
-  display: flex; }
-  .bottom button {
-    width: 50%; }
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  column-gap: 20px;
+  margin-top: 20px; }
 
 .equal {
   background-color: #C42B25;
