--- a/styles/scss/_calculator.scss
+++ b/styles/scss/_calculator.scss
@@ -41,16 +41,17 @@
 
 .grid {
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr;
-    grid-template-rows: 1fr 1fr 1fr 1fr;
+    grid-template-columns: repeat(4, 1fr);
+    grid-template-rows: repeat(4, 1fr);
+    column-gap: 20px;
+    row-gap: 20px;
 }
 
 .bottom {
-    display: flex;
-
-    button {
-        width: 50%;
-    }
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    column-gap: 20px;
+    margin-top: 20px;
 }
 
 .equal {
